2015-02-03 Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add new classes and headers
	* GSWIN32PrintPanel.[hm]: New class to handle print panel for the
	win32 theme.
	* GSWIN32PageLayout.[hm]: New class to handle page layout panel
	for the win32 theme.
	* WinUXTheme.m: Add category to pass back the class to be instantiated
	to the theme framework.

2015-1-8 Paul Landers <paul.landers@testplant.com>

	* WinNSMenu.m: Allow a menu item with a submenu to be
	disabled, if it contains no items.

2014-12-17 Paul Landers <paul.landers@testplant.com>

	* WinNSOpenPanel.m: Setting the list of allowedFileTypes
	uses only those in the list. Otherwise, use the types
	for the valid document.

2014-09-25 Riccardo Mottola <rm@gnu.org>

	* WinUXTheme.h
	* WinUXTheme.m
	Initialize widgets with InitCommonControlsEx()

2014-09-25 Riccardo Mottola <rm@gnu.org>

	* WinNSOpenPanel.m
	Initialize also the Save panel to explorer and initialize memory.

2014-09-10 Riccardo Mottola <rm@gnu.org>

	* WinUXTheme.h (GSScreenPointToMS)
	Align function to win32 backend version which considers system metrics.

2014-04-01 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Implement -nameFieldStringValue
	and -setNameFieldStringValue:.

2014-02-26 Doug Simons  <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Tweak to omit "All" when only one file type is allowed.

2014-02-25 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Rearrange the code in last commit. And add a better
	solution to get a valid document.

2014-02-25 Doug Simons  <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Fix previous changes to work again with fileTypes passed in.

2014-02-24 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Fix value of nFilterIndex in Open and Save panel.
	And add the hack to save a document with the selected format.

2014-02-23 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Changes to allow panel "Open" showing one entry for