@@ -1,3 +1,8 @@
+2015-02-11 Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSOpenPanel.m: Change call to not pull the first type if the
+	types array is empty.
+
 2015-02-03 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GNUmakefile: Add new classes and headers
